# AI_Trip_Planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/worflows/: deploy.yaml
.github/workflows/: deply.yaml
agent/: agent_workflow.py
configs/: config.yaml
exception/: expections.py
prompts/: prompt.py
tools/: currency_conversion.py  expense_calculator.py  place_search.py  weather_information.py
utils/: calculate_expenses.py  config_loader.py  model_loader.py  place_info_search.py  save_to_document.py  supabase_client.py  weather_info.py
